tests/health/gold/sdk/tests__lsp__under_score.toit.gold
tests/lsp/under_score.toit:8:7: error: Missing implementations for interface methods
class B implements A:
      ^
tests/lsp/under_score.toit:6:3: note: Missing implementation for 'foo'
  foo x
  ^~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
